Bug 51750 - [4.7 Regression] FAIL: 25_algorithms/heap/moveable*.cc execution test
Summary: [4.7 Regression] FAIL: 25_algorithms/heap/moveable*.cc execution test
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-04 10:48 UTC by Dominique d'Humieres
Modified: 2012-01-04 13:26 UTC (History)
3 users (show)

See Also:
Host:
Target: i686-*-linux* x86_64-*-linux* x86_64-apple-darwin10
Build:
Known to work:
Known to fail:
Last reconfirmed: 2012-01-04 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique d'Humieres 2012-01-04 10:48:11 UTC
Between revisions 182828 and 182830 the following tests started to fail with -m32 (see http://gcc.gnu.org/ml/gcc-regression/2012-01/msg00048.html ):

FAIL: 25_algorithms/heap/moveable.cc execution test
FAIL: 25_algorithms/heap/moveable2.cc execution test

The failures are

Assertion failed: (this->SharedInfo && this->ptr < this->SharedInfo->last), function operator*, file /opt/gcc/work/libstdc++-v3/testsuite/util/testsuite_iterators.h, line 287.
FAIL: 25_algorithms/heap/moveable.cc execution test
Comment 1 Richard Biener 2012-01-04 11:03:16 UTC
Confirmed, caused by the PR51730 fix.
Comment 2 Richard Biener 2012-01-04 13:25:35 UTC
Author: rguenth
Date: Wed Jan  4 13:25:28 2012
New Revision: 182872

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=182872
Log:
2012-01-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/51750
	* tree.c (size_low_cst): New function.
	* tree.h (size_low_cst): Declare.
	* fold-const.c (fold_comparison): Use it to extract the low
	part of the POINTER_PLUS_EXPR offset.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/fold-const.c
    trunk/gcc/tree.c
    trunk/gcc/tree.h
Comment 3 Richard Biener 2012-01-04 13:26:50 UTC
Fixed.