2012-01-04  Richard Guenther  <rguenther@suse.de>

PR middle-end/51750
	* tree.c (size_low_cst): New function.
	* tree.h (size_low_cst): Declare.
	* fold-const.c (fold_comparison): Use it to extract the low
	part of the POINTER_PLUS_EXPR offset.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182872 138bc75d-0d04-0410-961f-82ee72b054a4